--- a/_posts/post/2016-11-03-shell.md
+++ b/_posts/post/2016-11-03-shell.md
@@ -17,6 +17,8 @@ comments: true
 
 * 方案二， 在执行shell脚本的指令外层加一个() __<font color=#FF4500>测试成功，关闭session存储过程仍然继续执行</font>__
 
+* 方案三：nuhub command &
+
 ### 原理
 将一个或多个命名包含在“()”中就能让这些命令在子 shell 中运行中，从而扩展出很多有趣的功能，我们现在要讨论的就是其中之一。
 
