--- a/_posts/post/2017-08-18-webhooks.md
+++ b/_posts/post/2017-08-18-webhooks.md
@@ -109,6 +109,7 @@ comments: true
 * 配置python服务开机启动
 
     ``` shell
+    
     [Unit]
     Description=pythonServer
     
@@ -119,3 +120,5 @@ comments: true
     [Install]
     WantedBy=multi-user.target
     ```
+    
+    或者： nohup /usr/bin/python /opt/pages/www/script/server.py
