--- a/_posts/post/2017-08-18-webhooks.md
+++ b/_posts/post/2017-08-18-webhooks.md
@@ -121,4 +121,4 @@ comments: true
     WantedBy=multi-user.target
     ```
     
-    或者： nohup /usr/bin/python /opt/pages/www/script/server.py
+    或者：```nohup /usr/bin/python /opt/pages/www/script/server.py```
