--- a/_posts/post/2017-08-18-webhooks.md
+++ b/_posts/post/2017-08-18-webhooks.md
@@ -66,7 +66,11 @@ comments: true
             ''' hand request '''
     
             self.protocal_version = "HTTP/1.1"
+            
+            if allow:
+                self.send_header("SUCCESS", "SUCCESS")           
             self.send_response(200)
+            
             self.end_headers()
     
             print method
