--- a/_posts/post/2017-09-04-log4j.md
+++ b/_posts/post/2017-09-04-log4j.md
@@ -12,3 +12,8 @@ comments: true
 1. 继承```org.apache.log4j.PatternLayout```，该类是用来提供解析类和格式化结果拼接动作的，可见: ```org.apache.log4j.PatternLayout#format```
 2. 覆盖父类的```com.qlc.common.util.log.formatter.QlcPatternLayout#createPatternParser```方法，该方法会在父类构造函数中调用，用来创建解析器。
 3. 继承默认解析器```com.qlc.common.util.log.formatter.QlcPatternParser```
+    ``` java
+        protected PatternParser createPatternParser(String pattern) {
+            return new MyPatternParser(pattern);
+        }
+    ```
