--- a/_posts/post/2017-09-04-log4j.md
+++ b/_posts/post/2017-09-04-log4j.md
@@ -17,3 +17,5 @@ comments: true
             return new MyPatternParser(pattern);
         }
     ```
+4. 在自定义的Parser解析器中覆盖父类```org.apache.log4j.helpers.PatternParser#finalizeConverter```，用来扩展解析，具体扩展方式可参考父类的```finalizeConverter```方法。
+5. log4j的可以使用百分号+英文字母作为占位符，依据英文字母作为对应解析器的关键字，用来查找对应的解析器。
