--- a/_posts/post/2017-09-04-log4j.md
+++ b/_posts/post/2017-09-04-log4j.md
@@ -2,7 +2,7 @@
 layout: post
 title:  "log4j格式化占位符扩展"
 date:   2017-09-04
-excerpt: "基于log4j的PatternLayout的数据格式化扩展"
+excerpt: "基于log4j的PatternLayout的格式化占位符扩展"
 tag:
 - Log4j
 - Format
