--- a/_posts/post/2017-09-18-DSL.md
+++ b/_posts/post/2017-09-18-DSL.md
@@ -54,3 +54,18 @@ Elasticsearch 执行上面这个 match 查询的步骤是：
 用 term 查询计算每个文档相关度评分 _score ，这是种将 词频（term frequency，即词 quick 在相关文档的 title 字段中出现的频率）和反向文档频率（inverse document frequency，即词 quick 在所有文档的 title 字段中出现的频率），以及字段的长度（即字段越短相关度越高）相结合的计算方式。参见 相关性的介绍 。
 
 
+### 多词查询
+
+``` json
+GET /my_index/my_type/_search
+{
+    "query": {
+        "match": {
+            "title": "BROWN DOG!"
+        }
+    }
+}
+```
+
+* 如果title 字段是一个 string 类型（ analyzed ）已分析的全文字段，那么查询字符串也会选择相应的分词器对其进行分词
+* 上例中会将```BROWN DOG!```分成 ```brown``` ```dog```
