--- a/_posts/post/2017-09-18-DSL.md
+++ b/_posts/post/2017-09-18-DSL.md
@@ -69,3 +69,4 @@ GET /my_index/my_type/_search
 
 * 如果title 字段是一个 string 类型（ analyzed ）已分析的全文字段，那么查询字符串也会选择相应的分词器对其进行分词
 * 上例中会将```BROWN DOG!```分成 ```brown``` ```dog```
+* 默认查询词项关系为```or```的关系，则只要doc中包含其中一个词项，即会返回doc。
