--- a/_posts/post/2017-09-18-DSL.md
+++ b/_posts/post/2017-09-18-DSL.md
@@ -88,3 +88,21 @@ GET /my_index/my_type/_search
 ```
 
 * 设置查询词项为```and```关系。
+
+### bool查询
+
+``` json
+{
+   "bool" : {
+      "must" :     [],
+      "should" :   [],
+      "must_not" : [],
+   }
+}
+```
+* must
+    所有的语句都 必须（must） 匹配，与 AND 等价。
+* must_not
+    所有的语句都 不能（must not） 匹配，与 NOT 等价。
+* should
+    至少有一个语句要匹配，与 OR 等价。
