--- a/_posts/post/2017-09-18-DSL.md
+++ b/_posts/post/2017-09-18-DSL.md
@@ -92,6 +92,7 @@ GET /my_index/my_type/_search
 ### bool查询
 
 ```
+
 {
    "bool" : {
       "must" :     [],
@@ -99,6 +100,7 @@ GET /my_index/my_type/_search
       "must_not" : [],
    }
 }
+
 ```
 * must
     所有的语句都 必须（must） 匹配，与 AND 等价。
@@ -106,4 +108,21 @@ GET /my_index/my_type/_search
     所有的语句都 不能（must not） 匹配，与 NOT 等价。
 * should
     至少有一个语句要匹配，与 OR 等价。
+    
+* demo
+```
+{
+  "query": {
+    "bool": {
+      "must":     { "match": { "title": "quick" }},
+      "must_not": { "match": { "title": "lazy"  }},
+      "should": [
+                  { "match": { "title": "brown" }},
+                  { "match": { "title": "dog"   }}
+      ]
+    }
+  }
+}
+
+```
     
