--- a/_posts/post/2017-09-18-DSL.md
+++ b/_posts/post/2017-09-18-DSL.md
@@ -125,4 +125,23 @@ GET /my_index/my_type/_search
 }
 
 ```
-    
+
+### 精度控制
+* 我们可以通过 minimum_should_match 参数控制需要匹配的语句的数量， 它既可以是一个绝对的数字，又可以是个百分比
+
+```
+
+GET /my_index/my_type/_search
+{
+  "query": {
+    "bool": {
+      "should": [
+        { "match": { "title": "brown" }},
+        { "match": { "title": "fox"   }},
+        { "match": { "title": "dog"   }}
+      ],
+      "minimum_should_match": 2 
+    }
+  }
+}
+```
