--- a/_posts/post/2017-09-18-DSL.md
+++ b/_posts/post/2017-09-18-DSL.md
@@ -112,6 +112,7 @@ GET /my_index/my_type/_search
 * demo
 
 ```
+
 {
   "query": {
     "bool": {
@@ -147,3 +148,5 @@ GET /my_index/my_type/_search
   }
 }
 ```
+
+* 这个查询结果会将所有满足以下条件的文档返回： title 字段包含 "brown" AND "fox" 、 "brown" AND "dog" 或 "fox" AND "dog" 。如果有文档包含所有三个条件，它会比只包含两个的文档更相关。
