--- a/_posts/post/2017-09-18-DSL.md
+++ b/_posts/post/2017-09-18-DSL.md
@@ -150,3 +150,48 @@ GET /my_index/my_type/_search
 ```
 
 * 这个查询结果会将所有满足以下条件的文档返回： title 字段包含 "brown" AND "fox" 、 "brown" AND "dog" 或 "fox" AND "dog" 。如果有文档包含所有三个条件，它会比只包含两个的文档更相关。
+
+
+### 底层查询
+
+1. 关键字：term，不会对查询字符串进行分析。
+2. 上面的集中查询都是上层查询，会对查询字符串进行分析。
+3. 上层查询会讲查询语句分析之后转成底层查询。
+
+如：
+
+```
+{
+    "match": { "title": "brown fox"}
+}
+
+{
+  "bool": {
+    "should": [
+      { "term": { "title": "brown" }},
+      { "term": { "title": "fox"   }}
+    ]
+  }
+}
+```
+
+```
+{
+    "match": {
+        "title": {
+            "query":    "brown fox",
+            "operator": "and"
+        }
+    }
+}
+
+{
+  "bool": {
+    "must": [
+      { "term": { "title": "brown" }},
+      { "term": { "title": "fox"   }}
+    ]
+  }
+}
+
+```
