--- a/_posts/post/2017-10-15-zabbix.md
+++ b/_posts/post/2017-10-15-zabbix.md
@@ -9,4 +9,7 @@ comments: true
 ---
 
 ### 数据主动上报
-* zabbix agent：
+* zabbix agent：主动依据配置好的item抓取服务区数据。
+* zabbix sender：指定上报的item，主动上报数据。
+
+使用java实现```zabbix sender```协议，实现主动发送数据。[协议地址](https://www.zabbix.org/wiki/Docs/protocols/zabbix_sender/3.4)，[Java示例](https://www.zabbix.org/wiki/Docs/protocols/zabbix_sender/1.8/java_example)
