--- a/_posts/post/2017-10-15-zabbix.md
+++ b/_posts/post/2017-10-15-zabbix.md
@@ -15,7 +15,7 @@ comments: true
 使用java实现```zabbix sender```协议，实现主动发送数据。[协议地址](https://www.zabbix.org/wiki/Docs/protocols/zabbix_sender/3.4)，[Java示例](https://www.zabbix.org/wiki/Docs/protocols/zabbix_sender/1.8/java_example)。
 
 
-### item发现（自动生成item）
+### Item发现（自动生成item）
 * 配置Host Discovery rules
 * 设置Type为```Zabbix trapper```，定义好item key。
 * 定义```Item prototypes```，同样定义type为```Zabbix trapper```，可以使用占位符用来变量替换，如```{#KEY}```。
