--- a/_posts/post/2017-10-15-zabbix.md
+++ b/_posts/post/2017-10-15-zabbix.md
@@ -21,3 +21,4 @@ comments: true
 * 定义```Item prototypes```，同样定义type为```Zabbix trapper```，可以使用占位符用来变量替换，如```{#KEY}```。
 * 生成item仅需向discovery item key推送包含占位符的数据即可生成替换后生成的item。
 * [zabbix相关文档](https://www.zabbix.com/documentation/3.4/manual/discovery/low_level_discovery)
+* 相关信息：dubbo性能采集Filter，```com.alibaba.dubbo.monitor.support.MonitorFilter```
