--- a/_posts/life/2017-11-02-yanyan.md
+++ b/_posts/life/2017-11-02-yanyan.md
@@ -9,5 +9,10 @@ life: true
 comments: true
 ---
 
-**大家好，我叫徐晓妍，今天是我出生的第八天，我还不知道怎么和大家打招呼，我现在还只能躺在我妈妈的怀里，偶尔也会睁开眼睛偷偷的看一眼外面，**
+**大家好，我叫徐晓妍，今天是我出生的第八天，我还不知道怎么和大家打招呼，我现在还只能躺在我妈妈的怀里，偶尔也会睁开眼睛偷偷的看一眼外面，虽然或许也看不怎么明白。**
+{: .notice}
+**我也不不知道为什么，我特别容易饿，也特别想睡觉，或许过几天我会长大些，也能和大家多说些话。**
+{: .notice}
+**新的世界，么么哒**
+{: .notice}
 
