--- a/_posts/life/2017-11-02-yanyan.md
+++ b/_posts/life/2017-11-02-yanyan.md
@@ -15,4 +15,6 @@ comments: true
 {: .notice}
 **新的世界，么么哒**
 {: .notice}
-
+<figure>
+	<a href="{{ site.staticUrl }}/yanyan/image/IMG_1664.JPG"><img src="{{ site.staticUrl }}/yanyan/image/IMG_1664.JPG" /></a>
+</figure>
