--- a/_posts/life/2017-11-02-yanyan.md
+++ b/_posts/life/2017-11-02-yanyan.md
@@ -17,4 +17,7 @@ comments: true
 {: .notice}
 <figure>
 	<a href="{{ site.staticUrl }}/yanyan/image/IMG_1664.JPG"><img src="{{ site.staticUrl }}/yanyan/image/IMG_1664.JPG" /></a>
+	<a href="{{ site.staticUrl }}/yanyan/image/IMG_1665.JPG"><img src="{{ site.staticUrl }}/yanyan/image/IMG_1665.JPG" /></a>
+	<a href="{{ site.staticUrl }}/yanyan/image/IMG_1666.JPG"><img src="{{ site.staticUrl }}/yanyan/image/IMG_1666.JPG" /></a>
+	<a href="{{ site.staticUrl }}/yanyan/image/IMG_1667.JPG"><img src="{{ site.staticUrl }}/yanyan/image/IMG_1667.JPG" /></a>
 </figure>
