--- a/_posts/life/2017-11-02-yanyan.md
+++ b/_posts/life/2017-11-02-yanyan.md
@@ -13,7 +13,7 @@ comments: true
 {: .notice}
 **我也不不知道为什么，我特别容易饿，也特别想睡觉，或许过几天我会长大些，也能和大家多说些话。**
 {: .notice}
-**新的世界，么么哒^_^。**
+**新的世界，么么哒^_^**
 {: .notice}
 <figure>
 	<a href="{{ site.staticUrl }}/yanyan/image/IMG_1664.JPG"><img src="{{ site.staticUrl }}/yanyan/image/IMG_1664.JPG" /></a>
