--- a/_posts/life/2017-11-02-yanyan.md
+++ b/_posts/life/2017-11-02-yanyan.md
@@ -1,8 +1,8 @@
 ---
 layout: post
-title: "妍妍日记1"
+title: "妍小言"
 date: 2017-11-02
-excerpt: "妍妍日记"
+excerpt: "妍妍的日记-1"
 tags: [yanyan]
 feature: https://i.imgur.com/Ds6S7lJ.png
 life: true
