--- a/_posts/yan/2017-11-02-yanyan01.md
+++ b/_posts/yan/2017-11-02-yanyan01.md
@@ -5,7 +5,7 @@ date: 2017-11-02
 excerpt: "妍妍的日记-1"
 tags: [yanyan]
 feature: https://i.imgur.com/Ds6S7lJ.png
-life: true
+yan: true
 comments: true
 ---
 
