--- a/_posts/yan/2017-11-02-yanyan01.md
+++ b/_posts/yan/2017-11-02-yanyan01.md
@@ -3,7 +3,7 @@ layout: post
 title: "妍小言"
 date: 2017-11-02
 excerpt: "妍妍的日记-1"
-tags: [yanyan]
+tags: [徐晓妍]
 feature: https://i.imgur.com/Ds6S7lJ.png
 yan: true
 comments: true
