--- a/_posts/yan/2017-11-05-yanyan02.md
+++ b/_posts/yan/2017-11-05-yanyan02.md
@@ -9,7 +9,7 @@ yan: true
 comments: true
 ---
 
-**大家好，我叫徐晓妍，今天是我出生的第八天，我还不知道怎么和大家打招呼，我现在还只能躺在我妈妈的怀里，偶尔也会睁开眼睛偷偷的看一眼外面，虽然或许也看不怎么明白。**
+**爷爷奶奶给我洗澡的时候还是我还是很乖的^_^**
 {: .notice}
 <figure>
 	<a href="{{ site.staticUrl }}/yanyan/image/IMG_1694.JPG"><img src="{{ site.staticUrl }}/yanyan/image/IMG_1694.JPG" /></a>
