--- a/_posts/yan/2017-11-07-yanyan03.md
+++ b/_posts/yan/2017-11-07-yanyan03.md
@@ -12,7 +12,7 @@ comments: true
 **放几张我们妍的美照^_^**
 {: .notice}
 <figure>
-	<a href="{{ site.staticUrl }}/yanyan/image/IMG_1694.JPG"><img src="{{ site.staticUrl }}/yanyan/image/IMG_1694.JPG" /></a>
-	<a href="{{ site.staticUrl }}/yanyan/image/IMG_1700.JPG"><img src="{{ site.staticUrl }}/yanyan/image/IMG_1700.JPG" /></a>
-	<a href="{{ site.staticUrl }}/yanyan/image/IMG_1706.JPG"><img src="{{ site.staticUrl }}/yanyan/image/IMG_1706.JPG" /></a>
+	<a href="{{ site.staticUrl }}/yanyan/image/yan1.jpg"><img src="{{ site.staticUrl }}/yanyan/image/yan1.jpg" /></a>
+	<a href="{{ site.staticUrl }}/yanyan/image/yan2.jpg"><img src="{{ site.staticUrl }}/yanyan/image/yan2.jpg" /></a>
+	<a href="{{ site.staticUrl }}/yanyan/image/yan3.jpg"><img src="{{ site.staticUrl }}/yanyan/image/yan3.jpg" /></a>
 </figure>
