--- a/_posts/yan/2017-11-07-yanyan03.md
+++ b/_posts/yan/2017-11-07-yanyan03.md
@@ -15,4 +15,5 @@ comments: true
 	<a href="{{ site.staticUrl }}/yanyan/image/yan1.jpg"><img src="{{ site.staticUrl }}/yanyan/image/yan1.jpg" /></a>
 	<a href="{{ site.staticUrl }}/yanyan/image/yan2.jpg"><img src="{{ site.staticUrl }}/yanyan/image/yan2.jpg" /></a>
 	<a href="{{ site.staticUrl }}/yanyan/image/yan3.jpg"><img src="{{ site.staticUrl }}/yanyan/image/yan3.jpg" /></a>
+	<a href="{{ site.staticUrl }}/yanyan/image/yan4.jpg"><img src="{{ site.staticUrl }}/yanyan/image/yan4.jpg" /></a>
 </figure>
