--- a/_posts/yan/2017-11-10-yanyan04.md
+++ b/_posts/yan/2017-11-10-yanyan04.md
@@ -9,5 +9,5 @@ yan: true
 comments: true
 ---
 
-**徐晓妍这几天红屁屁了，每次换尿片都要全家总动员，一个人换，一个人洗，一个人拖着鸟笼**
+**徐晓妍这几天红屁屁了，每次换尿片都要全家总动员，一个人换，一个人洗，一个人托着鸟笼给她取暖，另外一个人不断补位。**
 {: .notice}
