--- a/_posts/yan/2017-11-10-yanyan04.md
+++ b/_posts/yan/2017-11-10-yanyan04.md
@@ -11,3 +11,9 @@ comments: true
 
 **徐晓妍这几天红屁屁了，每次换尿片都要全家总动员，一个人换，一个人洗，一个人托着鸟笼给她取暖，另外一个人不断补位。**
 {: .notice}
+
+**昨天晓妍妈个徐晓妍换尿布的时候，洗着洗着徐晓妍就一泡屎飙了出来，直接飙到了手臂上。**
+{: .notice}
+
+**希望徐晓妍的红屁股早点好。**
+{: .notice}
