--- a/_posts/yan/2017-11-10-yanyan04.md
+++ b/_posts/yan/2017-11-10-yanyan04.md
@@ -15,3 +15,6 @@ comments: true
 {: .notice}
 **希望徐晓妍的红屁股早点好。**
 {: .notice}
+<figure>
+	<a href="{{ site.staticUrl }}/yanyan/image/IMG_1728.JPG"><img src="{{ site.staticUrl }}/yanyan/image/IMG_1728.JPG" /></a>
+</figure>
