--- a/_posts/post/2017-11-10-bytebuf.md
+++ b/_posts/post/2017-11-10-bytebuf.md
@@ -2,7 +2,7 @@
 layout: post
 title:  "ByteBuf使用小插曲"
 date:   2017-11-10
-excerpt: "netty中ByteBuf入坑小记"
+excerpt: "Netty中ByteBuf入坑小记"
 tag:
 - netty
 - ByteBuf
