--- a/_posts/post/2017-11-11-bytebuf.md
+++ b/_posts/post/2017-11-11-bytebuf.md
@@ -8,3 +8,18 @@ tag:
 - ByteBuf
 comments: true
 ---
+
+### 遇到问题
+
+读取服务端返回的数据时多次调用了```ByteToMessageDecoder.decode```方法，得到多个相同的服务端返回。
+
+### 排查
+
+1. 抓包发现服务端服务端未多次发送数据包。
+2. netty在在设计解码器（如```ByteToMessageDecoder.decode```）时，会重复多次调用```decode```方法，直到ByteBuf中没有更多的可读数据才会触发下一个```ChannelInboundHandler```。
+
+### 检查
+
+发现自定义的解码器调用的是```ByteBuf.getBytes()```，不会改变ByteBuf的readIndex，也就是说不会被定义为消费了数据。
+
+### 
