--- a/_posts/post/2017-11-11-bytebuf.md
+++ b/_posts/post/2017-11-11-bytebuf.md
@@ -24,3 +24,10 @@ comments: true
 
 ### 修复
 
+修改从ByteBuf中获取数据的方式，使用```ByteBuf.readBytes()```
+
+``` java
+        int readCount = in.readableBytes();
+        byte[] responseData = new byte[readCount];
+        in.readBytes(responseData);
+```
