--- a/_posts/life/2017-11-13-kemuer.md
+++ b/_posts/life/2017-11-13-kemuer.md
@@ -9,12 +9,6 @@ life: true
 comments: true
 ---
 
-我们结婚啦，刚见到我老婆的时候，心里YY说怎么会有这么漂亮的女生，要是可以做我女朋友就好了。然后就老套的开始追求，到结婚那天，我们俩也一起走过了快两年的时间了。<br/>
-{: .notice}
-现在，我们已经结婚了，别人都说，结婚后，两个人就要换一种身份在一起，是一种亲人的感觉在一起。我觉得亲人的那种亲昵很舒服，我们俩也越来越那么亲昵，但是我认为我们之间的爱情会一直下去，没有任何能够转移，就算生活，就算时间，就算我们的小孩出生也不行。<br/>
-{: .notice}
-婚后，也觉得自己多了一种责任，曾经是一人吃饱，全家不愁的，现在也希望能够和她一起经营好自己的生活，不求富有，但求精致。<br/>
-{: .notice}
-最后，肖霄，谢谢你嫁给了我，时光易老，但爱你永远。祝我们和大家都越来越好。
+**祝贺下自己驾考科目二过关^_^**
 {: .notice}
 
