--- a/_posts/yan/2017-11-13-yanyan05.md
+++ b/_posts/yan/2017-11-13-yanyan05.md
@@ -9,8 +9,9 @@ yan: true
 comments: true
 ---
 
-**妍妈帮我们妍搭的小窝，看我们妍睡的多开心。**
+**妍妈帮我们妍搭的小窝，看我们妍睡的多开心^_^**
 {: .notice}
 <figure>
-	<a href="{{ site.staticUrl }}/yanyan/image/IMG_1728.JPG"><img src="{{ site.staticUrl }}/yanyan/image/yanyandewo.jpg" /></a>
+    <a href="{{ site.staticUrl }}/yanyan/image/yanyandewo.jpg"><img src="{{ site.staticUrl }}/yanyan/image/yanyandewo.jpg" /></a>
+	<a href="{{ site.staticUrl }}/yanyan/image/yanyandewo2.jpg"><img src="{{ site.staticUrl }}/yanyan/image/yanyandewo2.jpg" /></a>
 </figure>
