--- a/_posts/life/2017-11-13-kemuer.md
+++ b/_posts/life/2017-11-13-kemuer.md
@@ -2,13 +2,13 @@
 layout: post
 title: "驾考科目二"
 date: 2017-11-13
-excerpt: "科目二考试记录"
+excerpt: "科目二考试通过祝贺"
 tags: [驾考, 科目二]
 feature: https://i.imgur.com/Ds6S7lJ.png
 life: true
 comments: true
 ---
 
-**祝贺下自己驾考科目二过关^_^**
+**祝贺下自己驾考科目二考试过关^_^**
 {: .notice}
 
