--- a/_posts/yan/2017-11-16-yanyan06.md
+++ b/_posts/yan/2017-11-16-yanyan06.md
@@ -9,7 +9,7 @@ yan: true
 comments: true
 ---
 
-**小脸蛋这样看起来很像蜡笔小新^_^**
+**小脸蛋这样看起来很像蜡笔小新！蜡笔晓妍^_^**
 {: .notice}
 <figure>
     <a href="{{ site.staticUrl }}/yanyan/image/labixoaoxin1.jpg"><img src="{{ site.staticUrl }}/yanyan/image/labixoaoxin1.jpg" /></a>
