--- a/_posts/post/2017-11-17-dubbo.md
+++ b/_posts/post/2017-11-17-dubbo.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title:  "dubbo架构简述"
+title:  "Dubbo架构简述"
 date:   2017-11-16
 excerpt: "简述dubbo的架构流程"
 tag:
@@ -11,3 +11,12 @@ comments: true
 ## 全局入口-spring schema handler
 
 spring handler：```com.alibaba.dubbo.config.spring.schema.DubboNamespaceHandler```，定义了不同元素的解析器与映射的类。比如```dubbo:reference```对应```ReferenceBean```，```dubbo:service```对应```ServiceBean```。
+
+## provider侧
+
+* 读取spring配置，dubbo会将spring xml中的```dubbo:service```元素通过预先定义好的解析器封装成一个```ServiceBean```，这是一个service的入口。
+* ```ServiceBean```实现了spring的**ApplicationListener**接口，用来监听spring上下文事件。Dubbo响应了**ContextRefreshedEvent**事件，在上下文刷新之后执行**导出provider**动作。
+* 执行导出操作，需要两个信息： 
+    1. 通信协议信息，用来指定consumer和provider间的通信方式以及信息。
+    2. 注册中心信息，用来往对应的注册中心注册provider url。
+* 
