--- a/_posts/post/2017-11-17-dubbo.md
+++ b/_posts/post/2017-11-17-dubbo.md
@@ -19,4 +19,4 @@ spring handler：```com.alibaba.dubbo.config.spring.schema.DubboNamespaceHandler
 * 执行导出操作，需要两个信息： 
     1. 通信协议信息，用来指定consumer和provider间的通信方式以及信息。
     2. 注册中心信息，用来往对应的注册中心注册provider url。
-* ```com.alibaba.dubbo.config.ServiceConfig#doExportUrls```生成**registry URL**，根据协议**registry://**拿到对应的**RegistryProtocol**并调用其**export**方法。
+* ```com.alibaba.dubbo.config.ServiceConfig#doExportUrls```生成**registry URL**以及**provider URL**，并将**provider URL**作为**registry URL**的export参数绑定。根据**registry URL**的协议**registry://**拿到对应的**RegistryProtocol**并调用其**export**方法。
