--- a/_posts/post/2017-11-17-dubbo.md
+++ b/_posts/post/2017-11-17-dubbo.md
@@ -8,7 +8,7 @@ tag:
 comments: true
 ---
 
-## 全局入口-spring schema handler
+## 全局入口--spring schema handler
 
 spring handler：```com.alibaba.dubbo.config.spring.schema.DubboNamespaceHandler```，定义了不同元素的解析器与映射的类。比如**dubbo:reference**对应**ReferenceBean**，**dubbo:service**对应**ServiceBean**。
 
@@ -20,3 +20,11 @@ spring handler：```com.alibaba.dubbo.config.spring.schema.DubboNamespaceHandler
     1. 通信协议信息，用来指定consumer和provider间的通信方式以及信息。
     2. 注册中心信息，用来往对应的注册中心注册provider url。
 * ```com.alibaba.dubbo.config.ServiceConfig#doExportUrls```生成**registry URL**以及**provider URL**，并将**provider URL**作为**registry URL**的export参数绑定。根据**registry URL**的协议**registry://**拿到对应的**RegistryProtocol**并调用其**export**方法。
+* ```com.alibaba.dubbo.registry.integration.RegistryProtocol#export```主要完成两件事情：
+    1. 作为provider，使用定义好的通信协议来暴露服务，如dubbo，http，rmi等。
+        * 从**registry URL**的export参数来获取**provider URL**。
+        * 通过**provider URL**的协议来获取其对应的协议处理类并调用**export**方法。
+    2. 使用**registry URL**中的registry参数作为注册中心协议替换原来的**registry://**协议
+        * 通过新的**registry URL**的协议头，拿到相应的```com.alibaba.dubbo.registry.Registry```实例并调用其```com.alibaba.dubbo.registry.RegistryService#register```方法，比如向zookeeper新建临时节点。
+
+* 以上，就是provider侧的执行流程简述。
