--- a/_posts/post/2017-11-17-dubbo.md
+++ b/_posts/post/2017-11-17-dubbo.md
@@ -28,3 +28,8 @@ spring handler：```com.alibaba.dubbo.config.spring.schema.DubboNamespaceHandler
         * 通过新的**registry URL**的协议头，拿到相应的```com.alibaba.dubbo.registry.Registry```实例并调用其```com.alibaba.dubbo.registry.RegistryService#register```方法，比如向zookeeper新建临时节点。
 
 * 以上，就是provider侧的执行流程简述。
+
+## consumer侧
+
+* 同样的，dubbo会将**dubbo:reference**封装成一个**ReferenceBean**，但与provider不同，consumer实现了````org.springframework.beans.factory.FactoryBean```接口，初始化的流程推迟到了调用```org.springframework.beans.factory.FactoryBean#getObject```时。
+
