--- a/_posts/post/2017-11-17-dubbo.md
+++ b/_posts/post/2017-11-17-dubbo.md
@@ -31,5 +31,5 @@ spring handler：```com.alibaba.dubbo.config.spring.schema.DubboNamespaceHandler
 
 ## consumer侧
 
-* 同样的，dubbo会将**dubbo:reference**封装成一个**ReferenceBean**，但与provider不同，consumer实现了````org.springframework.beans.factory.FactoryBean```接口，初始化的流程推迟到了调用```org.springframework.beans.factory.FactoryBean#getObject```时。
+* 同样的，dubbo会将**dubbo:reference**封装成一个**ReferenceBean**，但与provider不同，consumer实现了```org.springframework.beans.factory.FactoryBean```接口，初始化的流程推迟到了调用```org.springframework.beans.factory.FactoryBean#getObject```时。
 
