--- a/_posts/post/2017-11-17-dubbo.md
+++ b/_posts/post/2017-11-17-dubbo.md
@@ -32,4 +32,13 @@ spring handler：```com.alibaba.dubbo.config.spring.schema.DubboNamespaceHandler
 ## consumer侧
 
 * 同样的，dubbo会将**dubbo:reference**封装成一个**ReferenceBean**，但与provider不同，consumer实现了```org.springframework.beans.factory.FactoryBean```接口，初始化的流程推迟到了调用```org.springframework.beans.factory.FactoryBean#getObject```时。
-
+* 生成**registry URL**，暂时指定协议为**registry://**，并将实际协议作为**registry**参数的值绑定在URL上。
+* 通过**registry URL**的协议**registry://**，得到相应**RegistryProtocol**，然后调用其```com.alibaba.dubbo.registry.integration.RegistryProtocol#refer```方法来获取provider引用。
+* 更新**registry URL**协议。
+* 通过**registry URL**获取相应的```com.alibaba.dubbo.registry.Registry```。
+* 使用**registry URL**和接口类型来生成相应的```com.alibaba.dubbo.registry.integration.RegistryDirectory```。
+    * RegistryDirectory通过**registry URL**和接口类型来命名。
+    * RegistryDirectory用来封装所有的invoker地址信息以及路由信息等。
+* 生成订阅URL，协议为**consumer://**，通过**registry URL**获取相应的注册中心，向注册中心注册**consumer URL**。
+* 调用对应的注册中心的subscribe方法，```com.alibaba.dubbo.registry.RegistryService#subscribe```。
+* 最终，会将**provider URL**保存到相应的RegistryDirectory中```com.alibaba.dubbo.registry.integration.RegistryDirectory#notify```。可以查看```com.alibaba.dubbo.registry.zookeeper.ZookeeperRegistry#doSubscribe```。
