--- a/_posts/post/2017-11-17-dubbo.md
+++ b/_posts/post/2017-11-17-dubbo.md
@@ -39,6 +39,16 @@ spring handler：```com.alibaba.dubbo.config.spring.schema.DubboNamespaceHandler
 * 使用**registry URL**和接口类型来生成相应的```com.alibaba.dubbo.registry.integration.RegistryDirectory```。
     * RegistryDirectory通过**registry URL**和接口类型来命名。
     * RegistryDirectory用来封装所有的invoker地址信息以及路由信息等。
+    * 负责通过**provider URL**中的协议信息获取相应的链接协议处理类并调用refer()方法以获取**Invoker**对象。
 * 生成订阅URL，协议为**consumer://**，通过**registry URL**获取相应的注册中心，向注册中心注册**consumer URL**。
 * 调用对应的注册中心的subscribe方法，```com.alibaba.dubbo.registry.RegistryService#subscribe```。
 * 最终，会将**provider URL**保存到相应的RegistryDirectory中```com.alibaba.dubbo.registry.integration.RegistryDirectory#notify```。可以查看```com.alibaba.dubbo.registry.zookeeper.ZookeeperRegistry#doSubscribe```。
+
+## 请求调用
+
+* 默认使用JDK动态代理模式来获取实际执行类。
+* 实际执行对象则是```com.alibaba.dubbo.registry.integration.RegistryProtocol#refer```返回的**Invoker**对象。
+* 最终会执行*```com.alibaba.dubbo.rpc.cluster.support.AbstractClusterInvoker#invoke```方法。
+* 从RegistryDirectory中获取**Invoker List**。
+* 通过负载均衡从**Invoker List**中获取一个Invoker。
+* 拿到对应的链接协议**Invoker**实例，执行远程调用。
