--- a/_posts/post/2017-11-17-dubbo.md
+++ b/_posts/post/2017-11-17-dubbo.md
@@ -52,3 +52,5 @@ spring handler：```com.alibaba.dubbo.config.spring.schema.DubboNamespaceHandler
 * 从RegistryDirectory中获取**Invoker List**。
 * 通过负载均衡从**Invoker List**中获取一个Invoker。
 * 拿到对应的链接协议**Invoker**实例，执行远程调用。
+
+* 注意，consumer实例是由```com.alibaba.dubbo.registry.integration.RegistryProtocol#refer```生成的，而用来执行远程链接处理远程协议的refer()方法则是由RegistryDirectory负责调用的。
