--- a/_posts/post/2017-11-17-dubbo.md
+++ b/_posts/post/2017-11-17-dubbo.md
@@ -39,7 +39,7 @@ spring handler：```com.alibaba.dubbo.config.spring.schema.DubboNamespaceHandler
 * 使用**registry URL**和接口类型来生成相应的```com.alibaba.dubbo.registry.integration.RegistryDirectory```。
     * RegistryDirectory通过**registry URL**和接口类型来命名。
     * RegistryDirectory用来封装所有的invoker地址信息以及路由信息等。
-    * 负责通过**provider URL**中的协议信息获取相应的链接协议处理类并调用refer()方法以获取**Invoker**对象。
+    * 负责通过**provider URL**中的协议信息获取相应的链接协议处理类并调用```refer()```方法以获取**Invoker**对象。
 * 生成订阅URL，协议为**consumer://**，通过**registry URL**获取相应的注册中心，向注册中心注册**consumer URL**。
 * 调用对应的注册中心的subscribe方法，```com.alibaba.dubbo.registry.RegistryService#subscribe```。
 * 最终，会将**provider URL**保存到相应的RegistryDirectory中```com.alibaba.dubbo.registry.integration.RegistryDirectory#notify```。可以查看```com.alibaba.dubbo.registry.zookeeper.ZookeeperRegistry#doSubscribe```。
@@ -53,4 +53,4 @@ spring handler：```com.alibaba.dubbo.config.spring.schema.DubboNamespaceHandler
 * 通过负载均衡从**Invoker List**中获取一个Invoker。
 * 拿到对应的链接协议**Invoker**实例，执行远程调用。
 
-* 注意，consumer实例是由```com.alibaba.dubbo.registry.integration.RegistryProtocol#refer```生成的，而用来执行远程链接处理远程协议的refer()方法则是由RegistryDirectory负责调用的。
+* 注意，consumer实例是由```com.alibaba.dubbo.registry.integration.RegistryProtocol#refer```生成的，而用来执行远程链接处理远程协议的```refer()```方法则是由RegistryDirectory负责调用的。
