--- a/_posts/post/2017-11-17-dubbo.md
+++ b/_posts/post/2017-11-17-dubbo.md
@@ -8,7 +8,7 @@ tag:
 comments: true
 ---
 
-## 全局入口--spring schema handler
+## 全局入口 spring schema handler
 
 spring handler：```com.alibaba.dubbo.config.spring.schema.DubboNamespaceHandler```，定义了不同元素的解析器与映射的类。比如**dubbo:reference**对应**ReferenceBean**，**dubbo:service**对应**ServiceBean**。
 
