--- a/_posts/post/2017-11-17-dubbo.md
+++ b/_posts/post/2017-11-17-dubbo.md
@@ -54,3 +54,5 @@ spring handler：```com.alibaba.dubbo.config.spring.schema.DubboNamespaceHandler
 * 拿到对应的链接协议**Invoker**实例，执行远程调用。
 
 * 注意，consumer实例是由```com.alibaba.dubbo.registry.integration.RegistryProtocol#refer```生成的，而用来执行远程链接处理远程协议的```refer()```方法则是由RegistryDirectory负责调用的。
+
+### 以上只是dubbo架构很小的一部分，更多的信息大家可以通过阅读dubbo源码获取 [dubbo源码地址](https://github.com/alibaba/dubbo)。
