--- a/_posts/post/2017-11-17-dubbo.md
+++ b/_posts/post/2017-11-17-dubbo.md
@@ -48,7 +48,7 @@ spring handler：**com.alibaba.dubbo.config.spring.schema.DubboNamespaceHandler*
 
 * 默认使用JDK动态代理模式来获取实际执行类。
 * 实际执行对象则是**com.alibaba.dubbo.registry.integration.RegistryProtocol#refer**返回的**Invoker**对象。
-* 最终会执行***com.alibaba.dubbo.rpc.cluster.support.AbstractClusterInvoker#invoke**方法。
+* 最终会执行**com.alibaba.dubbo.rpc.cluster.support.AbstractClusterInvoker#invoke**方法。
 * 从RegistryDirectory中获取**Invoker List**。
 * 通过负载均衡从**Invoker List**中获取一个Invoker。
 * 拿到对应的链接协议**Invoker**实例，执行远程调用。
