--- a/_posts/yan/2017-11-20-yanyan07.md
+++ b/_posts/yan/2017-11-20-yanyan07.md
@@ -8,3 +8,5 @@ feature: https://i.imgur.com/Ds6S7lJ.png
 yan: true
 comments: true
 ---
+
+<iframe width="560" height="315" src="{{ site.staticUrl }}/yanyan/vidio/yanyan.mp4" frameborder="0"> </iframe>
