--- a/_posts/yan/2017-11-20-yanyan07.md
+++ b/_posts/yan/2017-11-20-yanyan07.md
@@ -9,4 +9,4 @@ yan: true
 comments: true
 ---
 
-<iframe width="560" height="315" src="{{ site.staticUrl }}/yanyan/vidio/yanyan.mp4" frameborder="0"> </iframe>
+<iframe width="560" height="315" src="{{ site.staticUrl }}/yanyan/video/yanyan.mp4" frameborder="0"> </iframe>
