--- a/_posts/yan/2017-11-20-yanyan07.md
+++ b/_posts/yan/2017-11-20-yanyan07.md
@@ -11,4 +11,11 @@ comments: true
 
 **徐晓妍第一次学习抬头^_^**
 {: .notice}
-<iframe width="560" height="315" src="{{ site.staticUrl }}/yanyan/video/yanyan.mp4" frameborder="0"> </iframe>
+<video id="my-video" class="video-js" controls preload="auto" width="640" height="264"
+  poster="//vjs.zencdn.net/v/oceans.png" data-setup="{}">
+    <source src="{{ site.staticUrl }}/yanyan/video/yanyan.mp4" type='video/mp4'>
+    <p class="vjs-no-js">
+      To view this video please enable JavaScript, and consider upgrading to a web browser that
+      <a href="http://videojs.com/html5-video-support/" target="_blank">supports HTML5 video</a>
+    </p>
+  </video>
