--- a/_posts/yan/2017-11-20-yanyan07.md
+++ b/_posts/yan/2017-11-20-yanyan07.md
@@ -12,7 +12,7 @@ video: true
 
 **徐晓妍第一次学习抬头^_^**
 {: .notice}
-<video id="my-video" class="video-js" controls preload="auto" width="640" height="264" data-setup="{}">
+<video id="my-video" class="video-js" controls preload="auto" width="100%" height="auto" data-setup="{}">
     <source src="{{ site.staticUrl }}/yanyan/video/yanyan.mp4" type='video/mp4'>
     <p class="vjs-no-js">
       To view this video please enable JavaScript, and consider upgrading to a web browser that
