--- a/_posts/post/2017-11-24-aliware.md
+++ b/_posts/post/2017-11-24-aliware.md
@@ -2,7 +2,7 @@
 layout: post
 title:  "阿里中间件"
 date:   2017-11-24
-excerpt: "强烈推荐优秀的中间件团队--阿里中间件"
+excerpt: "强烈推荐关注优秀的中间件团队--阿里中间件团队"
 tag:
 - AliWare
 comments: true
