--- a/_posts/post/2017-11-24-aliware.md
+++ b/_posts/post/2017-11-24-aliware.md
@@ -8,4 +8,4 @@ tag:
 comments: true
 ---
 
-**阿里中间件团队是一个非常优秀，高技术含量的技术团队，贡献过非常多的优秀的开源项目，比如dubbo，RocketMQ。推荐关注阿里中间件的公共博客，以阅读他们分享的文章和关注他们的动态 [博客地址](http://jm.taobao.org/)。**
+阿里中间件团队是一个非常优秀，高技术含量的技术团队，贡献过非常多的优秀的开源项目，比如dubbo，RocketMQ。推荐关注阿里中间件的公共博客，以阅读他们分享的文章和关注他们的动态 [博客地址](http://jm.taobao.org/)。
