--- a/_posts/yan/2017-11-25-yanyan09.md
+++ b/_posts/yan/2017-11-25-yanyan09.md
@@ -10,7 +10,7 @@ comments: true
 video: true
 ---
 
-**等她大了让她回来看看自己小时候的走光照^_^**
+**等徐晓妍大了让她回来看看自己小时候的走光照^_^**
 {: .notice}
 <figure>
     <a href="{{ site.staticUrl }}/yanyan/image/xz1.jpg"><img src="{{ site.staticUrl }}/yanyan/image/xz1.jpg" /></a>
