--- a/_posts/yan/2017-11-29-yanyan10.md
+++ b/_posts/yan/2017-11-29-yanyan10.md
@@ -10,8 +10,8 @@ comments: true
 video: true
 ---
 
-**爸爸^_^**
+**爸爸抱着徐晓妍，很有爱的一张照片**
 {: .notice}
 <figure>
-    <a href="{{ site.staticUrl }}/yanyan/image/xz1.jpg"><img src="{{ site.staticUrl }}/yanyan/image/xz1.jpg" /></a>
+    <a href="{{ site.staticUrl }}/yanyan/image/bababao.jpg"><img src="{{ site.staticUrl }}/yanyan/image/bababao.jpg" /></a>
 </figure>
