--- a/_posts/yan/2017-11-30-yanyan11.md
+++ b/_posts/yan/2017-11-30-yanyan11.md
@@ -10,7 +10,7 @@ comments: true
 video: true
 ---
 
-**妈妈关于妍妍的话，立帖为证，坚决不删。$_$**
+**妈妈关于妍妍的话，立帖为证，坚决不删╮(￣▽ ￣)╭**
 {: .notice}
 <figure>
     <a href="{{ site.staticUrl }}/yanyan/image/IMG_1785.PNG"><img src="{{ site.staticUrl }}/yanyan/image/IMG_1785.PNG" /></a>
