--- a/_posts/post/2017-12-01-dubbo-spi.md
+++ b/_posts/post/2017-12-01-dubbo-spi.md
@@ -2,7 +2,7 @@
 layout: post
 title:  "dubbo spi解析"
 date:   2017-12-01
-excerpt: "dubbo spi实现机制————ExtensionLoader"
+excerpt: "dubbo spi实现机制——ExtensionLoader"
 tag:
 - dubbo
 - spi
