--- a/_posts/post/2017-12-01-dubbo-spi.md
+++ b/_posts/post/2017-12-01-dubbo-spi.md
@@ -12,4 +12,5 @@ comments: true
 看过dubbo开发者文档就会发现，dubbo中组件的扩展都需要你在**META-INF/dubbo**目录下新增一个以对应组件接口名为文件名，自定义扩展名为内容的文本文件。 那dubbo是如何加载这些扩展点又是如何匹配这些扩展点的。
 
 ## spi类加载
-
+在dubbo内部，所有扩展点的加载以及映射都是通过ExtensionLoader来实现的，每类组件都会拥有一个相应的ExtensionLoader实例，该实例会读取所有**META-INF/dubbo**目录下所有以该组件全路径命名的文件。<br/>
+ExtensionLoader以<name,class>方式存储该组件的扩展点实例。
