--- a/_posts/yan/2017-12-03-yanyan12.md
+++ b/_posts/yan/2017-12-03-yanyan12.md
@@ -10,7 +10,7 @@ comments: true
 video: true
 ---
 
-**徐晓妍出生39天，第一次带她去游泳，全家出动，前呼后拥，盛况空前。**
+**徐晓妍出生第39天，第一次带她去游泳，全家出动，前呼后拥，盛况空前。**
 {: .notice}
 <figure>
     <a href="{{ site.staticUrl }}/yanyan/image/swiming1.jpg"><img src="{{ site.staticUrl }}/yanyan/image/swiming1.jpg" /></a>
