--- a/_posts/yan/2017-12-05-yanyan14.md
+++ b/_posts/yan/2017-12-05-yanyan14.md
@@ -2,7 +2,7 @@
 layout: post
 title: "剃胎头啦"
 date: 2017-12-05
-excerpt: "妍妍de新发型-14"
+excerpt: "妍妍de新发型"
 tags: [徐晓妍]
 feature: https://i.imgur.com/Ds6S7lJ.png
 yan: true
