修改表格样式

--- a/_posts/post/2016-11-04-lock.md
+++ b/_posts/post/2016-11-04-lock.md
@@ -28,10 +28,11 @@ __在InnoDB，行锁是通过给索引上的索引项加锁来实现的，也就
 
 |session1 | session2|
 |:-------- |:--------|
-|set autocommit = false   |             update lock_test set fkey = 'A' where c = 1 |
+|set autocommit = false   |   |
+| update lock_test set fkey = 'A' where c = 1 | |
 |Rows matched: 2  Changed: 2  Warnings: 0 | |
- || update lock_test set fkey = 'C' where c = 2|
- | ERROR 1205   (HY000): Lock wait timeout exceeded; try restarting transaction| |
+ | | update lock_test set fkey = 'C' where c = 2|
+ | | ERROR 1205   (HY000): Lock wait timeout exceeded; try restarting transaction|
 
  ---------------------------
 
@@ -44,8 +45,8 @@ session1 | session2
 set autocommit = false   |             
 update lock_test set fkey = 'A' where c = 1 |
 Rows matched: 2  Changed: 2  Warnings: 0 |
- | update lock_test set fkey = 'C' where c = 2
- | Rows matched: 2  Changed: 2  Warnings: 0
+| | update lock_test set fkey = 'C' where c = 2
+| | Rows matched: 2  Changed: 2  Warnings: 0
 
 
 __使用主键索引、唯一索引或普通索引，InnoDB都会使用行锁来对数据加锁。__  
@@ -59,8 +60,8 @@ session1 | session2
 set autocommit = false   |             
 update lock_test set fkey = 'A' where c = 1 and fkey = 'D' |
 Rows matched: 1  Changed: 1  Warnings: 0 |
- | update lock_test set fkey = 'C' where c = 2  and fkey = 'M'
- | ERROR 1205   (HY000): Lock wait timeout exceeded; try restarting transaction
+| | update lock_test set fkey = 'C' where c = 2  and fkey = 'M'
+| | ERROR 1205   (HY000): Lock wait timeout exceeded; try restarting transaction
 
 
  __InnoDB对索引项加锁，尽管更新两条不同的数据，但使用相同的索引项__
@@ -71,9 +72,9 @@ Rows matched: 1  Changed: 1  Warnings: 0 |
  * 不是使用了索引字段过滤就会使用行级锁，需要explain看下mysql具体的执行计划
  * InnoDB行级锁是对索引项加锁，即
 
-id | select_type | table | partitions | type | possible_keys | key | key_len | ref | rows |filtered | Extra
--- | -- | -- | --| -- | -- | -- | -- | -- | -- | -- | --
-1 | UPDATE | lock_test | NULL | range | idx_lock | idx_lock | 8 | const | 2 | 100.00 | Using where; Using temporary
+| id | select_type | table | partitions | type | possible_keys | key | key_len | ref | rows |filtered | Extra |
+| :----: | :----: | :----: | :----: | :----: | :----: | :----: | :----: | :----: | :----: | :----: | ---- |
+| 1 | UPDATE | lock_test | NULL | range | idx_lock | idx_lock | 8 | const | 2 | 100.00 | Using where; Using temporary|
 
 
    rows对应的数据写操作均会被锁定
@@ -93,8 +94,8 @@ session1 | session2
 set autocommit = false   |             
 update lock_test set fkey = 'A' where c < 6 |
 Rows matched: 1  Changed: 1  Warnings: 0 |
- | insert into lock_test(c, fkey) values (2, 'T');
- | ERROR 1205   (HY000): Lock wait timeout exceeded; try restarting transaction
+| | insert into lock_test(c, fkey) values (2, 'T');
+| | ERROR 1205   (HY000): Lock wait timeout exceeded; try restarting transaction
 
 
  session1 | session2
@@ -102,8 +103,8 @@ Rows matched: 1  Changed: 1  Warnings: 0 |
 set autocommit = false   |             
 update lock_test set fkey = 'A' where c < 6 |
 Rows matched: 1  Changed: 1  Warnings: 0 |
- | update lock_test set fkey = 'A' where id = 2; 注释： id ＝ 2 and c = 3
- | ERROR 1205   (HY000): Lock wait timeout exceeded; try restarting transaction
+| | update lock_test set fkey = 'A' where id = 2; 注释： id ＝ 2 and c = 3
+| | ERROR 1205   (HY000): Lock wait timeout exceeded; try restarting transaction
 
 
   session1 | session2
@@ -111,8 +112,8 @@ Rows matched: 1  Changed: 1  Warnings: 0 |
 set autocommit = false   |             
 update lock_test set fkey = 'A' where c < 6 |
 Rows matched: 1  Changed: 1  Warnings: 0 |
- | insert into lock_test(c, fkey) values (7, 'CA');
- | Rows matched: 1 Changed: 1 Warnings: 0
+| | insert into lock_test(c, fkey) values (7, 'CA');
+| | Rows matched: 1 Changed: 1 Warnings: 0
 
 
  * __当update过滤条件为范围查询并且使用普通索引时，会对普通索引不存在部分添加间隙锁，主键索引数据添加排他锁。__
